# tomato

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: build.yaml  build.yml  release.yml  test.yaml
examples/: arrays.sh  associative.sh  get.sh  simple.sh  stdin.sh
fixtures/: sample.json  sample.toml
src/: bash.rs  json.rs  keys.rs  main.rs
