[package]
name = "tomato-toml"
version = "0.2.0"
edition = "2021"
authors = ["C J Silverio <ceejceej@gmail.com>"]
description = "🍅 A command-line tool to get and set values in toml files while preserving comments and formatting."
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities"]
keywords = ["cli", "toml", "bash"]

[[bin]]
name = "tomato"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["derive"] }
clap_complete = "3.2.4"
regex = "1.6.0"
serde_json = "1.0.83"
toml = "0.5.9"
# This does all the work.
toml_edit = { version = "0.14.4", features = ["serde"] }

# Do I have any dev deps?
