[package]
name = "tomato-toml"
version = "0.3.1"
edition = "2021"
authors = ["C J Silverio <ceejceej@gmail.com>"]
description = "🍅 A command-line tool to get and set values in toml files while preserving comments and formatting."
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["command-line-utilities"]
keywords = ["cli", "toml", "bash"]
repository = "https://github.com/ceejbot/tomato"
homepage = "https://github.com/ceejbot/tomato"

[[bin]]
name = "tomato"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.16", features = ["derive", "wrap_help"] }
clap_complete = "3.2.4"
regex = "1.9.5"
serde_json = "1.0"
toml = "0.7.3"
# This does all the work.
toml_edit = { version = "0.19.8", features = ["serde"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.0-prerelease.4"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# Publish jobs to run in CI
pr-run-mode = "skip"

# Do I have any dev deps?
